--- a/Echo.xcodeproj/xcshareddata/xcschemes/EchoSwiftData.xcscheme
+++ b/Echo.xcodeproj/xcshareddata/xcschemes/EchoSwiftData.xcscheme
@@ -16,9 +16,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "D577B38A2BFF9A2800F064F2"
-               BuildableName = "EchoSwiftData.app"
-               BlueprintName = "EchoSwiftData"
-               ReferencedContainer = "container:EchoSwiftData.xcodeproj">
+               BuildableName = "Echo.app"
+               BlueprintName = "Echo"
+               ReferencedContainer = "container:Echo.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -45,9 +45,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D577B38A2BFF9A2800F064F2"
-            BuildableName = "EchoSwiftData.app"
-            BlueprintName = "EchoSwiftData"
-            ReferencedContainer = "container:EchoSwiftData.xcodeproj">
+            BuildableName = "Echo.app"
+            BlueprintName = "Echo"
+            ReferencedContainer = "container:Echo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -62,9 +62,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "D577B38A2BFF9A2800F064F2"
-            BuildableName = "EchoSwiftData.app"
-            BlueprintName = "EchoSwiftData"
-            ReferencedContainer = "container:EchoSwiftData.xcodeproj">
+            BuildableName = "Echo.app"
+            BlueprintName = "Echo"
+            ReferencedContainer = "container:Echo.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
